[package]
name = "tracing-throttle"
version = "0.1.0"
edition = "2021"
authors = ["Joris Hartog"]
license = "MIT"
description = "High-performance log deduplication and rate limiting for the tracing ecosystem"
repository = "https://github.com/nootr/tracing-throttle"
documentation = "https://docs.rs/tracing-throttle"
readme = "README.md"
keywords = ["tracing", "logging", "rate-limiting", "deduplication", "throttle"]
categories = ["development-tools::debugging", "asynchronous"]
rust-version = "1.70"

[dependencies]
# Core tracing support
tracing = "0.1"
tracing-subscriber = "0.3"

# Fast hashing
ahash = "0.8"

# Concurrent data structures
dashmap = "6.0"

# Time handling
tokio = { version = "1", features = ["time", "sync", "rt", "macros"], optional = true }

[dev-dependencies]
tracing-throttle = { path = ".", features = ["test-helpers"] }
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["async"]
async = ["tokio"]
test-helpers = []

[[example]]
name = "basic"
required-features = []

[[example]]
name = "policies"
required-features = []

[[bench]]
name = "rate_limiting"
harness = false
